--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Servicios de Modelado Láser
 email: info@geoinn.com
 description: >- # this means to ignore newlines until "baseurl:"
   Los servicios de modelado láser de GEOINN ofrecen una serie de ventajas para sus clientes.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/jekyll-geoinn" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: geoinn.com
 github_username:  jekyll
