--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: info@geoinn.com
 description: >- # this means to ignore newlines until "baseurl:"
   Los servicios de modelado láser de GEOINN ofrecen una serie de ventajas para sus clientes.
 baseurl: "/jekyll-geoinn" # the subpath of your site, e.g. /blog
-url: "https://www.github.io/gcruzrios" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gcruzrios.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: geoinn.com
 github_username:  jekyll
 
